# segment-backup-job

./: .gitignore  Containerfile  Containerfile.segment-backup-job.rh  Dockerfile.segment-backup-job.rh  README.md  ci  main-installation.py  main-nightly.py  main.js  package-lock.json  package.json  pip_find_builddeps.py  pyproject.toml  requirements-build.in  requirements-build.txt  requirements.txt  script.py  script.sh  trigger-konflux-builds.txt
.github/workflows/: cronjobs.yaml
.tekton/: segment-backup-job-1-0-gamma-pull-request.yaml  segment-backup-job-1-0-gamma-push.yaml  segment-backup-job-pull-request.yaml  segment-backup-job-push.yaml  segment-backup-job-v1-2-pull-request.yaml  segment-backup-job-v1-2-push.yaml  segment-backup-job-v1-3-pull-request.yaml  segment-backup-job-v1-3-push.yaml
src/: installation.py  nightly.py  script.py
