[metadata]
name = "SegmentBackupJob"
version = "1.0"

[project]
requires-python = ">=3.11"
name = "SegmentBackupJob"
version = "1.0"
dependencies = [
    'segment-analytics-python==2.3.4',
    'PyYAML==6.0.2',
    'kubernetes==29.0.0',
    'openshift==0.13.2',
    'setuptools-scm==9.2.2',
    'setuptools>=80',
    'idna==3.10',
    'calver==2025.4.17',
    'types-psutil==7.2.1.20251231',
    'types-setuptools==76.0.0.20250313'
]
